--- a/intro.ipynb
+++ b/intro.ipynb
@@ -90,7 +90,7 @@
    "id": "29432a7b",
    "metadata": {},
    "source": [
-    "For those new to coding, feel free to edit the string with your own message, and re-run the code block to see the altered message printed out. Each time a cell is executed, any variables created will be retained in the local memory and can be accessed in any code blocks subsequently run on that same page. These are Jupyter Notebook code blocks. Holding variables in local memory is one of the nice features of Jupyter. Once a block is successfully executed, you do not need to run it again.  For lengthy data imports, for example, this can be quite a blessing!\n",
+    "For those new to coding, feel free to edit the string with your own message, and re-run the code block to see the altered message printed out. Or add some calculations (try `x = 2**3`) and then on a separate line print the variable's value (`print(x)`). Each time a cell is executed, any variables created will be retained in the local memory and can be accessed in any code blocks subsequently run on that same page. These are Jupyter Notebook code blocks. Holding variables in local memory is one of the nice features of Jupyter. Once a block is successfully executed, you do not need to run it again.  For lengthy data imports, for example, this can be quite a blessing!\n",
     "\n",
     "Note, however, that your calculations (or the person running them) can easily get \"confused\" if you run a code block multiple times or run them out of order. Say, for example, that block 1 defines a variable called `var` (note: the following blocks are not interactive; they are just there do demonstrate).\n",
     "```python\n",
