--- a/intro.ipynb
+++ b/intro.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "These three aspects of electrochemical reactions have led to the ubiquitous use of electrochemistry and electrochemical systems throughout society, for energy storage, conversion, and production, chemical processing, and sensors, among others. In recent years, advances in electrochemical systems (such as batteries) have led to a revolution in portable power for consumer devices and an explosion of electric mobility options. Moreover, the ability to couple efficient electrochemical storage solutions with intermittent renewable power sources (e.g. solar and wind) will have a significant impact on our attempts to decarbonize our energy supply chain and mitigate human impacts on Earth's climate and biodiversity. Beyond energy storage and conversion, electrochemical systems play an important role in a range of industrial chemical applications, as discussed in [Chapter 2](chapters/ch2-devices-and-systems/ch2-content.md). \n",
     "\n",
-    "```{figure} ../../images/EV.png\n",
+    "```{figure} images/EV.png\n",
     ":name: battery-charge-fig\n",
     ":width: 75%\n",
     "\n",
@@ -90,7 +90,7 @@
    "id": "29432a7b",
    "metadata": {},
    "source": [
-    "For those new to coding, feel free to edit the string with your own message, and re-run the code block to see the altered message printed out. Or add some calculations (try `x = 2**3`) and then on a separate line print the variable's value (`print(x)`). Each time a cell is executed, any variables created will be retained in the local memory and can be accessed in any code blocks subsequently run on that same page. These are Jupyter Notebook code blocks. Holding variables in local memory is one of the nice features of Jupyter. Once a block is successfully executed, you do not need to run it again.  For lengthy data imports, for example, this can be quite a blessing!\n",
+    "These are Jupyter code blocks.  Clicking on `run` will execute the Python code in that block. For those new to coding, feel free to edit the string with your own message, and re-run the code block to see the altered message printed out. Or add some calculations (try `x = 2**3`) and then on a separate line print the variable's value (`print(x)`). Each time a Jupyter code block is executed, any variables created will be retained in the local memory and can be accessed in any code blocks subsequently run on that same page. Holding variables in local memory is one of the nice features of Jupyter. Once a block is successfully executed, you do not need to run it again.  For lengthy data imports, for example, this can be quite a blessing!\n",
     "\n",
     "Note, however, that your calculations (or the person running them) can easily get \"confused\" if you run a code block multiple times or run them out of order. Say, for example, that block 1 defines a variable called `var` (note: the following blocks are not interactive; they are just there do demonstrate).\n",
     "```python\n",
@@ -107,7 +107,7 @@
     "Clearly, the intended value of `result` is 2.  However, if the user, wittingly or otherwise, runs code block 2 twice in a row before executing code block 3, they would get `result = 2.83`.  This is a relatively simple example, but demonstrates a common pitfall to Jupyter notebooks. See Joel Grus's [humorous talk](https://www.youtube.com/watch?v=7jiPeIFXb6U) on this, for more thoughts on the topic.\n",
     "\n",
     "\n",
-    "The other two buttons provide some degree of remedy from this problem. The `restart` button clears the local memory so that you can start fresh, while the `restart & run all` button clears out the local memory and runs all code blocks on that page, in the order that they appear.\n",
+    "The other two buttons provide some degree of remedy from this problem. The `restart` button clears the local memory so that you can start fresh, while the `restart & run all` button clears out the local memory and runs all code blocks on that page, in the order that they appear. When in doubt, clearing the memory and running the updated blocks in sequence is never a bad idea.\n",
     "\n",
     "## Suggesting Improvements\n",
     "Finally, this text exists as a repository on [GitHub](https://github.com).  Clicking the  {fab}`github` button at the top of the page will present an option to visit the code repository. The button also presents an `open issue` option, where one can submit any questions, concerns, or suggestions to help improve this book for future readers."
