--- a/intro.ipynb
+++ b/intro.ipynb
@@ -104,7 +104,7 @@
     "```python \n",
     "result = var**(0.5)\n",
     "```\n",
-    "Clearly, the intended value of `result` is 2.  However, if the user, wittingly or otherwise, runs code block 2 twice in a row before executing code block 3, they would get `result = 2.828`.  If the user skips the second code block, the get `result = 1.414`. This is a relatively simple example, but demonstrates a common pitfall to Jupyter notebooks. See Joel Grus's [humorous talk](https://www.youtube.com/watch?v=7jiPeIFXb6U), for more thoughts on the topic.\n",
+    "Clearly, the intended value of `result` is 2.  However, if the user, wittingly or otherwise, runs code block 2 twice in a row before executing code block 3, they would get `result = 2.828`.  If the user instead _skips_ the second code block, they would get `result = 1.414`. This is a relatively simple example, but demonstrates a common pitfall to Jupyter notebooks. See Joel Grus's [humorous talk](https://www.youtube.com/watch?v=7jiPeIFXb6U), for more thoughts on the topic.\n",
     "\n",
     "\n",
     "The other two buttons provide some degree of remedy from this problem. The `restart` button clears the local memory so that you can start fresh, while the `restart & run all` button clears out the local memory and runs all code blocks on that page, in the order that they appear. When in doubt, clearing the memory and running the updated blocks in the intended sequence is never a bad idea.\n",
@@ -112,14 +112,6 @@
     "## Suggesting Improvements\n",
     "Finally, this text exists as a repository on [GitHub](https://github.com).  Clicking the  {fab}`github` button at the top of the page will present an option to visit the code repository. The button also presents an `open issue` option, where one can submit any questions, concerns, or suggestions to help improve this book for future readers."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ca6e099",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
